# mongodb_runner

./: .gitignore  README.en.md  README.md  commit  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: env_loader.rs  lib.rs  llm.rs  mongo.rs  parser.rs
src/api/: llm.ts  mongo.ts
src/components/: ChatPanel.vue  ConnectionDialog.vue  JsonTreeView.vue  LLMConfig.vue  LLMProfileDialog.vue  LanguageSwitcher.vue  QueryEditor.vue  ResultPanel.vue  SidebarMenu.vue  ThemeSwitcher.vue
src/composables/: useChat.ts  useConnections.ts  useHistory.ts  useLLMProfiles.ts  useTheme.ts  useTreeKeyNav.ts
src/i18n/: index.ts
src/i18n/locales/: de-DE.ts  en-US.ts  es-ES.ts  fr-FR.ts  ja-JP.ts  ko-KR.ts  pt-BR.ts  ru-RU.ts  types.ts  zh-CN.ts  zh-TW.ts
src/styles/: global.css
src/utils/: formatMongo.ts
tools/: git_commit.py
